# mcp-drugs-extract-info

./: .gitignore  AI-chatbot-drugs-research.ipynb  README.md  drugs_research.py  mcp_chatbot.py  pyproject.toml  requirements.txt  server_config.json
drugs/insulin/: drug_info.json
mcp_drugs_extract_info.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
